--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "piyush-extension-pack",
   "displayName": "Essential Extension Pack by Piyush",
   "description": "Extensions I used on daily basics for web development and other languages",
-  "icon": "./assets/icon.png",
+  "icon": "assets/icon.png",
   "publisher": "piyush-pandey",
   "repository": {
     "type": "git",
     "url": "https://github.com/zephyrus21/piyush-extension-pack"
   },
-  "version": "0.0.1",
+  "version": "1.0.1",
   "engines": {
     "vscode": "^1.57.0"
   },
